Bug 448068 - Moving the seek bar for a paused track does not update the current play time
Summary: Moving the seek bar for a paused track does not update the current play time
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.1
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-07 15:10 UTC by Jack Hill
Modified: 2023-06-15 14:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08
Sentry Crash Report:


Attachments
Current play time not updating automatically (59.38 KB, video/x-matroska)
2022-01-07 15:10 UTC, Jack Hill
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jack Hill 2022-01-07 15:10:26 UTC
Created attachment 145195 [details]
Current play time not updating automatically

SUMMARY

STEPS TO REPRODUCE
1. Start playing a track
2. Pause the track
3. Move the seek bar

OBSERVED RESULT
Current play time does not change until the play button is pressed again

EXPECTED RESULT
Current play time should update when seek bar is moved

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbleweed 20220103
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-08-18 19:29:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/381
Comment 2 Nate Graham 2022-08-18 20:01:00 UTC
Seems to have been fixed at some point, as I can't reproduce this in current git master, but I could in the past.
Comment 3 Yerrey Dev 2022-08-19 01:27:24 UTC
Can still reproduce on git master.
Comment 4 Jack Hill 2022-08-19 10:25:28 UTC
Using 22.04.2, I also can't reproduce it any more. I switched to Fedora a few days ago, so maybe the bug isn't present on Fedora (36).
Comment 5 Dmitry 2022-08-19 17:53:08 UTC
(In reply to Jack Hill from comment #4)
> Using 22.04.2, I also can't reproduce it any more. I switched to Fedora a
> few days ago, so maybe the bug isn't present on Fedora (36).

Yes, most likely, the bug disappeared due to the transition to Fedora. On Archlinux, the problem is still relevant
Comment 6 Nate Graham 2022-08-19 19:20:18 UTC
I'm on Fedora too, but I build Elisa from source and I can't reproduce it.
Comment 7 Yerrey Dev 2022-08-19 20:21:30 UTC
If I had to guess, could it be libvlc issue? Those who can't reproduce, what libvlc version are you running? KDE Unstable Neon is at 3.0.9.2-1 at the moment.
Comment 8 Jack Hill 2022-08-22 17:44:44 UTC
Problem also doesn't exist on openSUSE Tumbleweed 20220821.

Fedora doesn't have libvlc installed by default, and I manually uninstalled vlc on tumbleweed.

Fedora and Tumbleweed both use Qt 5.15.5 now. Maybe it was a bug in Qt Multimedia that was fixed in 5.15.5? Does arch still use 5.15.2?
Comment 9 Dmitry 2022-08-23 07:30:38 UTC
(In reply to Jack Hill from comment #8)

No, I definitely use 5.15.5 on Archlinux
Comment 10 Bug Janitor Service 2023-06-15 11:49:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/467
Comment 11 Bug Janitor Service 2023-06-15 11:49:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/467
Comment 12 Jack Hill 2023-06-15 14:38:48 UTC
Git commit d69d4c54809a562e576abf79a266a01ce97708c1 by Jack Hill.
Committed on 15/06/2023 at 11:36.
Pushed by ngraham into branch 'master'.

Emit positionChanged when seeking with vlc backend

It seems that vlc does not generate an event when calling libvlc_media_player_set_position,
so we have to do it ourselves

M  +1    -0    src/audiowrapper_libvlc.cpp

https://invent.kde.org/multimedia/elisa/-/commit/d69d4c54809a562e576abf79a266a01ce97708c1