Emit positionChanged when seeking with vlc backend

It seems that vlc does not generate an event when calling libvlc_media_player_set_position,
so we have to do it ourselves

BUG: 448068